cluster/kube-system/hubble/virtualservice.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    external-dns.alpha.kubernetes.io/target: raspbernetes.com
spec:
  hosts:
    - 'hubble.raspbernetes.com'
  gateways:
    - istio-system/istio-system-ingress-gateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 80
            host: hubble-ui.kube-system.svc.cluster.local
